--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -2,7 +2,7 @@
 
 {% block PageBody %}
 
-	<!-- Insert markup for homepage here -->
+	< Insert markup for homepage here >
 
     <h1>My homepage</h1>
 
